plugins { id 'com.android.application' }
android {
    namespace 'com.jpq.mobile'
    compileSdk 35
    defaultConfig {
        applicationId 'com.jpq.mobile'
        minSdk 26
        targetSdk 35
        ndk { abiFilters 'arm64-v8a' }
        versionCode 3
        versionName '0.3.0'
        testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
    }
    compileOptions { coreLibraryDesugaringEnabled true; sourceCompatibility JavaVersion.VERSION_17; targetCompatibility JavaVersion.VERSION_17 }
    buildTypes { release { minifyEnabled false } }
    testOptions { unitTests.returnDefaultValues = true }
}
dependencies {
    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:2.1.5'
    implementation 'org.opencv:opencv:4.12.0'
    androidTestImplementation 'androidx.test.uiautomator:uiautomator:2.3.0'
    androidTestImplementation 'androidx.test:runner:1.6.2'
    androidTestImplementation 'androidx.test.ext:junit:1.2.1'
    testImplementation 'junit:junit:4.13.2'
    testImplementation 'org.json:json:20240303'
}
